--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Benvenuti</title>
 </head>
 <body>
+    <?php echo "Ciao Mondo in ph" ?>
     <h1>Ciao, mondo!</h1>
     <p>Benvenuti nel nostro sito ospitato su GitHub Pages.</p>
 </body>
