--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     php~<?php echo "Ciao Mondo in ph" ?>NESSUN PHP~php
-    <h1>Ciao, mondo! tranne a qualcuno</h1>
+    <h1>Ciao, mondo!</h1>
     <p>Benvenuti nel nostro sito ospitato su GitHub Pages.</p>
 </body>
 </html>
